Bugfix: fix building for both JDK1.8 and JDK10
- use separate profiles for pre-10 and 10- javadoc version: for 10 and up, we
  need to explicitly export JDK internal classes from CertUtil.java
- can then also add -html5 flag for 10 and up
- move to javadoc plugin 3.0.1
- add maven-jar-plugin version
- remove additionalparam from properties
- No need to re-set the maven-jar-plugin in children since it's set in the parent