@@ -38,7 +38,6 @@
     <properties>
         <revision>4.1.2-RCauth</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <additionalparam>-Xdoclint:none</additionalparam>
     </properties>
     <modules>
         <module>ncsa-security-common</module>
@@ -70,6 +69,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>2.3.2</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -166,30 +166,78 @@
               </executions>
             </plugin>
 
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9.1</version>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                        <configuration>
-                            <!-- Java 8 specific or empty javadoc tags make the build fail -->
-                            <additionalparam>-Xdoclint:none</additionalparam>
-                        </configuration>
-
-                    </execution>
-                </executions>
-
+                <version>3.0.1</version>
+                <!-- NOTE executions are defined in profiles, depending on java version -->
             </plugin>
+
 
         </plugins>
 
     </build>
+
+    <profiles>
+        <profile>
+            <id>java10</id>
+            <activation>
+                <jdk>[10,]</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                                <configuration>
+                                    <doclint>none</doclint>
+                                    <additionalOptions>-html5</additionalOptions>
+                                    <additionalJOptions>
+                                       <additionalJOption>--add-exports</additionalJOption>
+                                       <additionalJOption>java.base/sun.security.pkcs10=ALL-UNNAMED</additionalJOption>
+                                       <additionalJOption>--add-exports</additionalJOption>
+                                       <additionalJOption>java.base/sun.security.x509=ALL-UNNAMED</additionalJOption>
+                                       <additionalJOption>--add-exports</additionalJOption>
+                                       <additionalJOption>java.base/sun.security.util=ALL-UNNAMED</additionalJOption>
+                                    </additionalJOptions>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>java8</id>
+            <activation>
+                <jdk>[,1.9]</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                                <configuration>
+                                    <doclint>none</doclint>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
     <distributionManagement>
         <repository>
             <id>sonatype-nexus-staging</id>
